2017.10/_sources/plugins/available/longitudinal/first-distances.txt
first-distances: First distance computation between sequential states
=====================================================================

.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <pre>Usage: qiime longitudinal first-distances [OPTIONS]

     Calculates first distances between sequential states for samples collected
     from individual subjects sampled repeatedly at two or more states. This
     method is similar to the "first differences" method, except that it
     requires a distance matrix as input and calculates first differences as
     distances between successive states. Outputs a data series of first
     distances for each individual subject at each sequential pair of states,
     labeled by the SampleID of the second state (e.g., paired distances
     between time 0 and time 1 would be labeled by the SampleIDs at time 1).
     This file can be used as input to linear mixed effects models or other
     longitudinal or diversity methods to compare changes in first distances
     across time or among groups of subjects.

   Options:
     --i-distance-matrix PATH        Artifact: DistanceMatrix  [required]
                                     Matrix
                                     of distances between pairs of samples.
     --m-metadata-file PATH          Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata  [required]
                                     Sample metadata file containing
                                     individual_id_column.
     --p-state-column TEXT           [required]
                                     Metadata column containing state
                                     (e.g., Time) across which samples are
                                     paired.
     --p-individual-id-column TEXT   [required]
                                     Metadata column containing IDs
                                     for individual subjects.
     --p-replicate-handling [random|drop|error]
                                     [default: error]
                                     Choose how replicate
                                     samples are handled. If replicates are
                                     detected, "error" causes method to fail;
                                     "drop" will discard all replicated samples;
                                     "random" chooses one representative at
                                     random from among replicates.
     --o-first-distances PATH        Artifact: SampleData[FirstDifferences]
                                     [required if not passing --output-dir]
                                     Series of first distances.
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
         <pre>First distance computation between sequential states

   Calculates first distances between sequential states for samples collected
   from individual subjects sampled repeatedly at two or more states. This
   method is similar to the "first differences" method, except that it
   requires a distance matrix as input and calculates first differences as
   distances between successive states. Outputs a data series of first
   distances for each individual subject at each sequential pair of states,
   labeled by the SampleID of the second state (e.g., paired distances between
   time 0 and time 1 would be labeled by the SampleIDs at time 1). This file
   can be used as input to linear mixed effects models or other longitudinal
   or diversity methods to compare changes in first distances across time or
   among groups of subjects.

   Parameters
   ----------
   distance_matrix : DistanceMatrix
       Matrix of distances between pairs of samples.
   metadata : Metadata
       Sample metadata file containing individual_id_column.
   state_column : Str
       Metadata column containing state (e.g., Time) across which samples are
       paired.
   individual_id_column : Str
       Metadata column containing IDs for individual subjects.
   replicate_handling : Str % Choices({'drop', 'error', 'random'}), optional
       Choose how replicate samples are handled. If replicates are detected,
       "error" causes method to fail; "drop" will discard all replicated
       samples; "random" chooses one representative at random from among
       replicates.

   Returns
   -------
   first_distances : SampleData[FirstDifferences]
       Series of first distances.</pre>
       </div>
     </div>
   </div>